--- a/cource/slideshow.html
+++ b/cource/slideshow.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
 	</head>
+
 	<body>
+		<div class="box">
+			<ul>
+				<li><img src="" alt="" /></li>
+				<li><img src="" alt="" /></li>
+				<li><img src="" alt="" /></li>
+				<li><img src="" alt="" /></li>
+				<li><img src="" alt="" /></li>
+			</ul>
+			<span class="left"></span>
+			<span class="right"></span>
+			<ul class="point">
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</div>
+
 	</body>
+
 </html>
